--- a/内网相关/【红蓝对抗】新年的第一次内网实战.md
+++ b/内网相关/【红蓝对抗】新年的第一次内网实战.md
@@ -1,10 +1,10 @@
-> 本文由 [简悦 SimpRead](http://ksria.com/simpread/) 转码， 原文地址 [mp.weixin.qq.com](https://mp.weixin.qq.com/s/7cpqiaDxNxoY7ZtyhzU_IQ)
+原文地址 [mp.weixin.qq.com](https://mp.weixin.qq.com/s/7cpqiaDxNxoY7ZtyhzU_IQ)
 
-![](https://mmbiz.qpic.cn/mmbiz_png/rTicZ9Hibb6RXu3bXekvbOVFvAicpfFJwIOcQOuakZ6jTmyNoeraLFgI4cibKrDRiaPAljUry4dy4e2zK8lUMyKfkGg/640?wx_fmt=png)
+
 
 前言  
 
-=====
+
 
 新年第一天上班，接到一个客户授权的渗透测试项目，新年新气象，上来就有了一个好的开端，因为拿下了目标哈哈，特此记录 2021 年第一个项目吧。
 
@@ -69,30 +69,3 @@ CS 成功上线，接下来我们就开始提权吧。
 
 虽然说这次内网渗透并没有遇到什么坎坷，没什么难点，但好歹也算自己新年的第一个实战哈哈，特此记录吧，师傅们轻喷。祝大家在新的一年里 coder 们 0errors，0 warnings。hacker 们都能够拿下目标，牛年牛 p。
 
-E
-
-N
-
-D
-
-**关**
-
-**于**
-
-**我**
-
-**们**
-
-Tide 安全团队正式成立于 2019 年 1 月，是新潮信息旗下以互联网攻防技术研究为目标的安全团队，团队致力于分享高质量原创文章、开源安全工具、交流安全技术，研究方向覆盖网络攻防、系统安全、Web 安全、移动终端、安全开发、物联网 / 工控安全 / AI 安全等多个领域。
-
-团队作为 “省级等保关键技术实验室” 先后与哈工大、齐鲁银行、聊城大学、交通学院等多个高校名企建立联合技术实验室，近三年来在网络安全技术方面开展研发项目 60 余项，获得各类自主知识产权 30 余项，省市级科技项目立项 20 余项，研究成果应用于产品核心技术研究、国家重点科技项目攻关、专业安全服务等。对安全感兴趣的小伙伴可以加入或关注我们。
-
-![](https://mmbiz.qpic.cn/mmbiz_gif/rTicZ9Hibb6RX4MU7S4WB8R6vF3JbUjA7K0ZtOPxqGSo1HGPhTDicQibOro93UYNBOwRPd4EFseGTDsl1tan0ZXcmw/640?wx_fmt=gif)
-
-我知道你**在看**哟
-
-![](https://mmbiz.qpic.cn/mmbiz_png/rTicZ9Hibb6RVJq73PAV8iaQCPQyOPyU8Ogkicew5KMd52mUWzJfFj3dJZvlic64DFticvDw8cFIBUwubIQAkF5IXQtw/640?wx_fmt=png)
-
-![](https://mmbiz.qpic.cn/mmbiz_gif/rTicZ9Hibb6RVJq73PAV8iaQCPQyOPyU8OgTqzpHQhUIM8BG5s07pmhaElGiclG2tlw7ceJtrgVwZepMEpQpdvic1xg/640?wx_fmt=gif)
-
-![](https://mmbiz.qpic.cn/mmbiz_gif/rTicZ9Hibb6RVJq73PAV8iaQCPQyOPyU8Og23eRiaUlSIpFGAOzOUv2fVVWr1ZKozfELyDaWWnpGmfabNTNiblArbdw/640?wx_fmt=gif)
