--- a/内网相关/内网渗透 - 代理篇（一）.md
+++ b/内网相关/内网渗透 - 代理篇（一）.md
@@ -1,6 +1,6 @@
-\> 本文由 \[简悦 SimpRead\](http://ksria.com/simpread/) 转码， 原文地址 \[mp.weixin.qq.com\](https://mp.weixin.qq.com/s/DNeqytyEq0IDK8-7YfrYZA)
+原文地址 \[mp.weixin.qq.com\](https://mp.weixin.qq.com/s/DNeqytyEq0IDK8-7YfrYZA)
 
-![](https://mmbiz.qpic.cn/mmbiz_gif/lFOEJLHA9qlicxGM47K4815LLNn8DTMZibibkkllDgjFG8nwKN4w3mSiaib9MQaV4THiaaZQ1icBU5dzMjwrHIjOoFolw/640?wx_fmt=gif)
+
 
 **声明：**公众号大部分文章来自团队核心成员和知识星球成员，少部分文章经过原作者授权和其它公众号白名单转载。未经授权，严禁转载，如需转载，请联系开白！
 
@@ -15,7 +15,6 @@ reGeorg 是 reDuh 的继承者，利用了会话层的 socks5 协议，结合 Pr
 ```
 reGeorg：https://github.com/L-codes/Neo-reGeorg
 Proxifier：https://sourceforge.net/projects/proxychains-ng/
-
 ```
 
 下面将以 php 类型的网站环境为例给大家介绍如何通过 reGeorg+Proxifier 工具搭建代理，进行内网渗透。
@@ -99,26 +98,3 @@ python reGeorgSocksProxy.py -u http://192.168.43.175/tunnel.nosocket.php -p 9999
 
   
 
-  
-
-  
-
-**END**
-
-* * *
-
-  
-
-**免费星球：**要求每个人在两周内输出一篇文章发到星球里面，文章为星球成员自己整理的内容，如超过两周没有文章输出的将被拉黑一个月，超过 3 次将被踢出星球，永久禁止加入！
-
-**收费星球：**进入的星球成员可以在里面学习一年，包括贝塔安全实验室整理好的学习资料，可让星球管理及合伙人邀请加入免费星球，可以不用发文章，加入的免费星球免踢一年！
-
-| 
-
-![](https://mmbiz.qpic.cn/mmbiz_png/lFOEJLHA9ql3aeHJgZ66ibibFw4OibjvDos7YuK3k1fbic4pJsibwhVkBicdjmQbricFx6gKwEoGqLQuIaVeMjoBP2Yibg/640?wx_fmt=png)
-
- | 
-
-![](https://mmbiz.qpic.cn/mmbiz_png/lFOEJLHA9ql3aeHJgZ66ibibFw4OibjvDossWnjm1H72RRcpfIrib6YpWsQ6v6j63sC7ClnZibCgEWPISIpoK1Afm2g/640?wx_fmt=png)
-
- |![](https://mmbiz.qpic.cn/mmbiz_png/lFOEJLHA9qnvGHiapxEr9yj0I36sAgvUErOgpelOJrS93wLRGQXJCORkfRc8EEm4C0dq9SsaGicy9eYMR7xEwMGg/640?wx_fmt=png)
